--- a/fasting-backend/package.json
+++ b/fasting-backend/package.json
@@ -8,7 +8,11 @@
     "start": "node dist/server.js",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint .",
-    "test": "vitest"
+    "test": "vitest",
+    "typeorm": "typeorm-ts-node-commonjs -d src/infra/db.ts",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +20,16 @@
   "type": "commonjs",
   "dependencies": {
     "@fasting/shared": "file:../fasting-shared",
+    "argon2": "^0.44.0",
     "bullmq": "^5.63.1",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
@@ -33,10 +40,12 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
     "pino-pretty": "^13.1.2",
     "supertest": "^7.1.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
