--- a/fasting-backend/package.json
+++ b/fasting-backend/package.json
@@ -30,6 +30,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
@@ -42,6 +43,7 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "eslint": "^9.39.1",
     "pino-pretty": "^13.1.2",
     "supertest": "^7.1.4",
