--- a/fasting-backend/package.json
+++ b/fasting-backend/package.json
@@ -12,7 +12,8 @@
     "typeorm": "typeorm-ts-node-commonjs -d src/infra/db.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "workers": "tsx src/worker-main.ts"
   },
   "keywords": [],
   "author": "",
